WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
.ZmLoginDialog-HeaderText, .ZmLoginDialog-SubHeaderText {
	color: white;
}
.ZmLoginDialog-HeaderText {
	font-style: bold
	font-size: 14pt;
}
.ZmLoginDialog-MainPanel {
	width:460px;
	background-image:url(/zimbra/skins/steel/images/bg_pebble.gif);
}
.ZmLoginDialog-SubHeaderText { font-size: 12pt; }
.ZmLoginDialog-Field { width: 290px; }
.ZmLoginDialog-ErrorText { width: 360px; }
.ZmLoginDialog-ErrorPanel {
	border: 1px solid #999999;
	background-color: #FFFFCC;
	width:415px;
	height: 55px;
}

/* Search bar */
.SearchPanel {
	width: 100%;
	height: 20;
}

/* Browse View */
.ZmBrowseView {
	height: 225px;
	width: 100%;
	overflow: hidden;
}
.ZmBrowseView {background-color:white;}
.ZmPickerOverview {overflow: hidden;}
.ZmPicker {
	background-color:#EEEEEE;
	border-right: 1px solid #999999;
	width: 200px;
}
.ZmPicker .DwtToolBar {
	background-color:#CCCCCC;
	border: 1px solid;
	border-color: #E0E0E0 #555555 #555555 #E0E0E0;
	height:24px;
}

.ZmPicker .DwtToolBar .TBButton {
	border: 1px solid #CCCCCC;
}

.ZmPickerLabel {
	Xfilter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#FFF0F0F0,endColorStr=#FF9997B5);
}

/* Conversation */
.ZmConvListFragment { color: gray; font-weight: normal; }
.Row-Selected .ZmConvListFragment { color: #333333; 	font-weight: normal; }

.ZmConvView {background-color: #2557AD;}
.ZmConvView .DwtListView-ColHeader {
	border-width: 1 0 0 0;
	border-style: solid;
	border-color: #777777;
}
.ZmConvView td, ZmConvView .Tags .TagTd { overflow: hidden; }
.ZmConvView td { white-space: nowrap; }
.ZmConvView .SubjectBar {
	background-color: #CCCCCC;
}
.ZmConvView .Tags {
	padding-left: 3px;
	padding-right: 3px;
	padding-bottom: 3px;
}
.ZmConvView .Tags .LabelTd {width: 5ex;}
.ZmConvView .Tags .TagTd { white-space: normal; }
.ZmConvView .Tags a { padding-left: 5px; }
.ZmConvView .Subject, .ZmConvView .Tags, .ZmConvView .Tags table {

}
.ZmConvView .Subject {
	font-size: 12pt;
	font-weight: bold;
	padding: 3px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.ZmConvView .Tags a:link, .ZmConvView .Tags a:active, .ZmConvView .Tags a:visited {
	text-decoration: none;
	color: #2557AD;
}
.ZmConvView .Tags a:hover {
	text-decoration: none;
	color: #CC3333;
}
.ZmConvView .Tags img {border: none;}

/* Mail message */
.ZmMailMsgView {
	width: 100%;
	background-color: white;
}

.ZmMailMsgView .ZmToolBar {
  background-color: #ffffff;
  filter:progid:DXImageTransform.Microsoft.Gradient(enabled=false);
  margin-left :12px;
  height: auto;
  width:auto;
}

.ZmMailMsgView .vertSep {
  height:20px;
}

.ZmMailMsgView .MsgHeader {
	border-bottom: 1px solid #777777;
}

.ZmMailMsgView .MsgHeader table {
  table-layout: fixed;
  width: 100%;
  background-color: #EEEEEE;
}

.ZmMailMsgView .MsgHeader .LabelColName {
	overflow:hidden;
	width: 15ex;
	white-space: nowrap;
	font-weight: bold;
	vertical-align: top;
	text-align: right;
}

.ZmMailMsgView .MsgHeader .LabelColValue {
	white-space: normal;
	vertical-align: top;
}

.ZmMailMsgView .AttName, .ZmMailMsgView .AttName-matched {padding-right: 8px;}
.ZmMailMsgView .AttName-matched { background-color: #FFFFBB; white-space: nowrap; }

.ZmMailMsgView .Displayimages {
  cursor: pointer;
  background-color: #FFFFCC;
  padding: 7px;
  font-size: 10pt;
  border-bottom: 1px solid #777777;
}

.ZmMailMsgView .Displayimages td {
  font-size: 10pt;
}

/* Message compose */
.ZmComposeView {
	background-color: #EEEEEE;
	width: 100%;
}
.ZmComposeView .composerTable {
	table-layout: fixed;
	width: 100%;
}
/* styles below apply to attachments table in iframe */
.iframeTable {
	table-layout: fixed;
}
.colButtons {width: 62px;}
.hSpace {width: 5px;}


.ZmComposeView .addLink {margin: 0 0 0 65px;}
.ZmComposeView .subjectField { width: 100%; }
.ZmComposeView .addresses {height: 50px;}
.ZmComposeView .addresses, .ZmComposeView .msgArea {
	width: 100%;
	overflow: auto;
}

.ZmComposeView .msgArea {
	height: 100%;
	font: 10pt monospace;
}

.ZmComposeView .attachText {
	width:60px;
	text-align:right;
	white-space:nowrap;
	overflow:hidden; 
}

.ZmHtmlEditor {
	padding: 3px;
}

.ZmHtmlEditor .DwtHtmlEditorTextArea {
	font: 10pt monospace;
	width: 100%;
	overflow: auto;
	padding: 1px;
	border-width: 1px;
	border-style: solid;
	border-color: #000000 #AAAAAA #AAAAAA #000000;
}

.ZmHtmlEditor .DwtHtmlEditorIFrame {
	border: 1px solid;
	border-color: #000 #aaa #aaa #000;
	background-color: white;
	width: 100%;
}

.TcdDialogTable .TcdLabel {
	white-space:nowrap; 
	padding:2px 5px; 
	text-align:right;
}

.TcdDialogTable fieldset {
	margin-left:5px;
}

.TcdDialogTable .BorderColorSwatch {
	padding:2px;
	border:1px outset;
	width:21px;
	height:21px;
	background-color:black;
}


.ZmComposeTBButton {
	filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#FFFFFFFF,endColorStr=#20808080);
}

.ZmComposeTBButton.toggled {
	filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#FFFFFFFF,endColorStr=#20808080);
	background-color: white;
}




/* NEW CONTACTS UI STYLES */
.ZmContactSplitView {
	background-color: white;
	padding: 4px;
}

.ZmContactSimpleView {
	background-color: white;
	border: 1px solid #666666;
}

.ZmContactSimpleView .SimpleContact,
.ZmContactSimpleView .SimpleContact-right,
.ZmContactSimpleView .SimpleContact-drag {
	border-bottom: 1px solid #EEEEEE
	width: 100%;
	overflow-x: hidden;
}

.ZmContactSimpleView .SimpleContact-right,
.ZmContactSimpleView .SimpleContact-drag {
	background-color:#EAF5F5;
}

.ZmContactSimpleView .SimpleContact-drag {
	color: white;
}

.ZmContactSimpleView .SimpleContactHover {
	background-color: #EEEEEE
}

.ZmContactInfoView {
	background-color: white;
	border: 1px solid rgb(120, 120, 120);
	overflow: hidden;
}
/* ... */

